[package]
name = "krust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
k8s-openapi = { version = "0.20", features = ["v1_28"] }
bollard = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
base64 = "0.21"
async-stream = "0.3"
tokio-stream = "0.1"
prost = "0.12"
prost-types = "0.12"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
bytes = "1.5"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
serial_test = "3"
